--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.1.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.4.2",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.20",
     "@types/styled-components": "^5.1.34"
   }
 }
