--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.1",
+    "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@mui/styled-engine-sc": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -21,8 +23,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
