--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router": "^7.1.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
-    "typescript": "^4.4.2",
+    "swiper": "^11.2.0",
+    "typescript": "^5.7.2",
     "uuid": "^11.0.3",
     "web-vitals": "^2.1.0"
   },
