--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.1",
+    "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
@@ -21,13 +22,15 @@
     "gsap": "^3.12.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.1.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.0",
     "typescript": "^5.7.2",
     "uuid": "^11.0.3",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zod": "^3.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
