--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portifolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fresatto.github.io/portifolio",
+  "homepage": "https://fresatto.dev",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
